--- a/Capex.Web/Capex.Web/Views/Documentacion/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/Documentacion/Index.cshtml
@@ -100,14 +100,23 @@
                     <div class="page-title-box">
                         <div class="btn-group float-right">
                             <ol class="breadcrumb hide-phone p-0 m-0">
-                                <li class="breadcrumb-item"><a href="#">Capex</a></li>
+                                @*<li class="breadcrumb-item"><a href="#">Capex</a></li>
                                 <li class="breadcrumb-item"><a href="#" onclick="document.location='@Url.Action("Index", "Login")'">Login</a></li>
-                                <li class="breadcrumb-item"><a href="#" onclick="document.location='@Url.Action("Index", "Panel")'">Panel</a></li>
+                                <li class="breadcrumb-item"><a href="#" onclick="document.location='@Url.Action("Index", "Panel")'">Panel</a></li>*@
+                                <li class="breadcrumb-item active">Capex</li>
+                                <li class="breadcrumb-item active">Login</li>
+                                <li class="breadcrumb-item active">Panel</li>
                                 <li class="breadcrumb-item active">Biblioteca</li>
                             </ol>
                         </div>
-                        <h6 class="page-title">Biblioteca</h6>
+
+                        <h6 class="page-title">
+                            <input type="button" id="BotonVolverGeneral" onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "Panel")'" class="btn btn-primary btn-sm" value="Volver al Panel" />&nbsp;
+                            @*<input type="button" id="BotonVolverGeneral" onclick="Actualizar()" class="btn btn-success btn-sm" value="Actualizar Vista" />*@
+                        </h6>
+
                     </div>
+                        <h6 class="page-title">Biblioteca Sistema CAPEX</h6>
                 </div>
             </div>
             <!-- Contenido -->
@@ -117,7 +126,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Listado de Documentos</h6>
+                                    <h6>Listado de Documentos Disponibles</h6>
                                 </div>
                             </div>
                             <div class="row">
