--- a/Capex.Web/Capex.Web/Views/GestionVisacion/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionVisacion/Index.cshtml
@@ -203,7 +203,7 @@
                             </ol>
                         </div>
                         <h6 class="page-title">
-                            <input type="button" id="BotonVolverGeneral" onclick="document.location='@Url.Action("Index", "Panel")'" class="btn btn-primary btn-sm" value="Volver al Panel" />
+                            <input type="button" id="BotonVolverGeneral" onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "Panel")'" class="btn btn-primary btn-sm" value="Volver al Panel" />
                             <input type="button" id="BotonVolverGeneral" onclick="Actualizar()" class="btn btn-success btn-sm" value="Actualizar Vista" />
                         </h6>
                     </div>
@@ -222,7 +222,7 @@
                                         <h4 class="ml-3 toggle">Has seleccionado</h4>
                                     </div>
                                     <div class="col-4">
-                                        <button type="button" id="buttonFilterAction" onClick="FNFilterActionGetData();" disabled class="mb-3 btn btn-warning btn-sm">
+                                        <button type="button" id="buttonFilterAction" onClick="FNFilterActionGetData(true);" disabled class="mb-3 btn btn-warning btn-sm">
                                             <span class="glyphicon glyphicon-filter"></span> Filtrar
                                         </button>
                                     </div>
@@ -237,7 +237,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Iniciativas en Visación</h6><div id="iconFilter"></div>
+                                    <h6>Visación</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
@@ -269,16 +269,16 @@
                                                         }
                                                         else
                                                         {
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionResumen")'"> Resumen Iniciativas           <span id="ContenedorContResumenIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionDesarrollo")'"> En Desarrollo              <span id="ContenedorContDesaIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionVisacion")'" class="active"> Visación      <span id="ContenedorContVisIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionObservada")'"> Observadas                  <span id="ContenedorContComent" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionIngresada")'"> REVISIÓN C.E.               <span id="ContenedorContIngresadaIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionEnRevision")'"> REVISIÓN AMSA              <span id="ContenedorContRevisionIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionAprobadaAmsa")'"> Aprobada AMSA            <span id="ContenedorContAprobadaAMSAIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="1"})'"> No Aprobada GAF            <span id="ContenedorContNoAprobadaGAFIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="2"})'"> No Aprobada C.E.           <span id="ContenedorContNoAprobadaCEIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="3"})'"> No Aprobada AMSA           <span id="ContenedorContNoAprobadaAMSAIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionResumen")'"> Resumen Iniciativas           <span id="ContenedorContResumenIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionDesarrollo")'"> En Desarrollo              <span id="ContenedorContDesaIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionVisacion")'" class="active"> Visación      <span id="ContenedorContVisIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionObservada")'"> Observadas                  <span id="ContenedorContComent" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionIngresada")'"> REVISIÓN C.E.               <span id="ContenedorContIngresadaIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionEnRevision")'"> REVISIÓN AMSA              <span id="ContenedorContRevisionIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionAprobadaAmsa")'"> Aprobada AMSA            <span id="ContenedorContAprobadaAMSAIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="1"})'"> No Aprobada GAF            <span id="ContenedorContNoAprobadaGAFIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="2"})'"> No Aprobada C.E.           <span id="ContenedorContNoAprobadaCEIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="3"})'"> No Aprobada AMSA           <span id="ContenedorContNoAprobadaAMSAIni" class="label label-warning float-right">0</span></li>
                                                         }
                                                     }
                                                 </ul>
@@ -428,7 +428,21 @@
         });
 
         function getUrl() {
+            $('#AppLoaderContainer').show();
+            var rowCount = $('#iniciativas >tbody >tr').length;
+            console.log("getUrl() Inicio rowCount=", rowCount);
+            var delay = 30;
+            if (rowCount && rowCount != undefined && rowCount != "") {
+                if (parseInt(rowCount) >= 300) {
+                    delay = 55;
+                }
+            }
             document.location.href = '../../Planificacion/ExcelResumenIniciativa?token=' + window.location.pathname.substring(1);
+            console.log("getUrl() delay=", delay);
+            setTimeout(function delay() {
+                $('#AppLoaderContainer').hide();
+                console.log("getUrl() fin");
+            }, (delay * 1000));
         }
 
         window.onpageshow = function (event) {
