--- a/Capex.Web/Capex.Web/Views/Mantenedor/UsuarioNuevo.cshtml
+++ b/Capex.Web/Capex.Web/Views/Mantenedor/UsuarioNuevo.cshtml
@@ -154,7 +154,7 @@
                                                             <div class="form-row mt-0" style="width:100%; font-size:11px;">
                                                                 <div class="col-sm-4 pb-1">
                                                                     <label for="UsuRut">RUT</label>
-                                                                    <input type="text" class="form-control" style="text-transform:uppercase; font-size:11px;height:36px; font-size:11px;" onkeypress="return FNIsNumberKey(event)" id="UsuRut" maxlength="12" placeholder="Rut" required>
+                                                                    <input type="text" class="form-control" style="text-transform:uppercase; font-size:11px;height:36px; font-size:11px;" onkeypress="return FNIsNumberKeyRut(event)" id="UsuRut" maxlength="12" placeholder="Rut" required>
                                                                     <label><code>Sin puntos. Ejemplo: 123456789-0</code></label>
                                                                 </div>
                                                                 <div class="col-sm-4 pb-1">
