--- a/Capex.Web/Capex.Web/Views/Gestion/VerIniciativa.cshtml
+++ b/Capex.Web/Capex.Web/Views/Gestion/VerIniciativa.cshtml
@@ -2,6 +2,7 @@
 @model LoginInfo
 @{
     ViewBag.Title = "Sistema de Gestión de Iniciativas CAPEX";
+    ViewBag.periodoIni = 0;
 }
 @{
     Layout = null;
@@ -25,6 +26,7 @@
     <link href="~/fonts/css/all.css" rel="stylesheet" />
 </head>
 <body>
+
     <div id="stars"></div>
     <div id="stars2"></div>
     <!-- Navigation Bar-->
@@ -75,6 +77,7 @@
                             <!--IDENTIFICACION-->
                             @foreach (var Idd in ViewBag.Identificacion)
                             {
+                                ViewBag.periodoIni = Idd.PidPeriodo;
                                 <div class="container offset-md-0 m-t-10">
                                     <div class="row">
                                         <div class="col-xl-12 offset-md-0">
@@ -640,7 +643,7 @@
                                                             <tr style="background-color:#5c808d; height:100%;">
                                                                 <th valign="middle" style="width:180px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:Left;"><strong>Presupuesto Capex (KUS$)</strong></div></th>
                                                                 <th valign="middle" style="width:80px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:center;"><strong>Años Anteriores</strong></div></th>
-                                                                <th valign="middle" style="width:80px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:center;"><strong>Año 2021</strong></div></th>
+                                                                <th valign="middle" style="width:80px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:center;"><strong>Año @ViewBag.periodoIni</strong></div></th>
                                                                 <th valign="middle" style="width:80px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:center;"><strong>Años Posteriores</strong></div></th>
                                                                 <th valign="middle" style="width:80px;"><div align="center" style="width:100%; height:20px; margin:0px 0px 0px 0px; padding:5px 0px 0px 0px; text-align:center;"><strong>Total Capex</strong></div></th>
                                                             </tr>
