--- a/Capex.Web/Capex.Web/Views/GestionAprobadaAmsa/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionAprobadaAmsa/Index.cshtml
@@ -205,7 +205,7 @@
                             </ol>
                         </div>
                         <h6 class="page-title">
-                            <input type="button" id="BotonVolverGeneral" onclick="document.location='@Url.Action("Index", "Panel")'" class="btn btn-primary btn-sm" value="Volver al Panel" />&nbsp;
+                            <input type="button" id="BotonVolverGeneral" onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "Panel")'" class="btn btn-primary btn-sm" value="Volver al Panel" />&nbsp;
                             <input type="button" id="BotonVolverGeneral" onclick="Actualizar()" class="btn btn-success btn-sm" value="Actualizar Vista" />
                         </h6>
                     </div>
@@ -224,7 +224,7 @@
                                         <h4 class="ml-3 toggle">Has seleccionado</h4>
                                     </div>
                                     <div class="col-4">
-                                        <button type="button" id="buttonFilterAction" onClick="FNFilterActionGetData();" disabled class="mb-3 btn btn-warning btn-sm">
+                                        <button type="button" id="buttonFilterAction" onClick="FNFilterActionGetData(true);" disabled class="mb-3 btn btn-warning btn-sm">
                                             <span class="glyphicon glyphicon-filter"></span> Filtrar
                                         </button>
                                     </div>
@@ -239,7 +239,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Resumen de Inicitivas</h6><div id="iconFilter"></div>
+                                    <h6>Aprobada AMSA</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
@@ -276,16 +276,16 @@
                                                         }
                                                         else
                                                         {
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionResumen")'"> Resumen Iniciativas           <span id="ContenedorContResumenIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionDesarrollo")'"> En Desarrollo              <span id="ContenedorContDesaIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionVisacion")'"> Visación                     <span id="ContenedorContVisIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionObservada")'"> Observadas                  <span id="ContenedorContComent" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionIngresada")'"> REVISIÓN C.E.               <span id="ContenedorContIngresadaIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionEnRevision")'"> REVISIÓN AMSA              <span id="ContenedorContRevisionIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionAprobadaAmsa")'" class="active"> Aprobada AMSA  <span id="ContenedorContAprobadaAMSAIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="1"})'"> No Aprobada GAF            <span id="ContenedorContNoAprobadaGAFIni" class="label label-warning float-right">0</span></li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="2"})'"> No Aprobada C.E.           <span id="ContenedorContNoAprobadaCEIni" class="label label-warning float-right">0</span> </li>
-                                                            <li onclick="document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="3"})'"> No Aprobada AMSA           <span id="ContenedorContNoAprobadaAMSAIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionResumen")'"> Resumen Iniciativas           <span id="ContenedorContResumenIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionDesarrollo")'"> En Desarrollo              <span id="ContenedorContDesaIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionVisacion")'"> Visación                     <span id="ContenedorContVisIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionObservada")'"> Observadas                  <span id="ContenedorContComent" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionIngresada")'"> REVISIÓN C.E.               <span id="ContenedorContIngresadaIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionEnRevision")'"> REVISIÓN AMSA              <span id="ContenedorContRevisionIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionAprobadaAmsa")'" class="active"> Aprobada AMSA  <span id="ContenedorContAprobadaAMSAIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="1"})'"> No Aprobada GAF            <span id="ContenedorContNoAprobadaGAFIni" class="label label-warning float-right">0</span></li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="2"})'"> No Aprobada C.E.           <span id="ContenedorContNoAprobadaCEIni" class="label label-warning float-right">0</span> </li>
+                                                            <li onclick="$('#AppLoaderContainer').show();document.location='@Url.Action("Index", "GestionNoAprobada",new { opcion ="3"})'"> No Aprobada AMSA           <span id="ContenedorContNoAprobadaAMSAIni" class="label label-warning float-right">0</span></li>
                                                         }
                                                     }
                                                 </ul>
@@ -345,8 +345,8 @@
 
         </div>
     </div>
-    @Html.Partial("~/Views/Gestion/Adjunto.cshtml")
     <!--Hidden Control-->
+    @Html.Partial("~/Views/Gestion/Adjunto.cshtml")
     @{
         if (Session["CAPEX_SESS_USERNAME"] == null)
         {
@@ -424,20 +424,26 @@
         });
 
         function getUrl() {
+            $('#AppLoaderContainer').show();
+            var rowCount = $('#iniciativas >tbody >tr').length;
+            console.log("getUrl() Inicio rowCount=", rowCount);
+            var delay = 30;
+            if (rowCount && rowCount != undefined && rowCount != "") {
+                if (parseInt(rowCount) >= 300) {
+                    delay = 55;
+                }
+            }
             document.location.href = '../../Planificacion/ExcelResumenIniciativa?token=' + window.location.pathname.substring(1);
+            console.log("getUrl() delay=", delay);
+            setTimeout(function delay() {
+                $('#AppLoaderContainer').hide();
+                console.log("getUrl() fin");
+            }, (delay * 1000));
         }
 
         window.onpageshow = function (event) {
             console.log("onpageshow gestion aprobada amsa!");
-            setTimeout(function () {
-                console.log("setTimeout 1000");
-                $('#iniciativas > tbody  > tr').each(function (index, tr) {
-                    if (!$(tr).attr('style')) {
-                        var selectElm = $("td:last-child", tr).children("select");
-                        selectElm.val(-1);
-                    }
-                });
-            }, 500);
+            FNLimpiarSelect();
         };
 
 
