--- a/Capex.Web/Capex.Web/Views/Planificacion/EvalRiesgo.cshtml
+++ b/Capex.Web/Capex.Web/Views/Planificacion/EvalRiesgo.cshtml
@@ -38,34 +38,7 @@
         border: 1px solid #808080;
     }
 
-    /*.well {
-        background: none;
-        height: 320px;
-    }
-
-    .table-scroll tbody {
-        position: absolute;
-        overflow-y: scroll;
-        height: 500px;
-    }
-
-    .table-scroll tr {
-        width: 100%;
-        table-layout: fixed;
-        display: inline-table;
-    }
-
-    .table-scroll thead > tr > th {
-        border: none;
-    }
-
-    .header th {
-        height: 2px;
-        line-height: 2px;
-    }
-    */
-
-    .table-fixed thead {
+    /*.table-fixed thead {
         width: 97%;
     }
 
@@ -82,8 +55,26 @@
     .table-fixed tbody td, .table-fixed thead > tr > th {
         float: left;
         border-bottom-width: 0;
+    }*/
+
+    .table-fixed thead {
+        width: 97%;
     }
 
+    .table-fixed tbody {
+        height: 230px;
+        overflow-y: auto;
+        width: 100%;
+    }
+
+    .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+        display: block;
+    }
+
+        .table-fixed tbody td, .table-fixed thead > tr > th {
+            float: left;
+            border-bottom-width: 0;
+        }
 </style>
 <!--Inicio Vista Parcial Evaluación Riesgo-->
 <div class="card offset-md-0">
